<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ExaminationSystem</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
     <string name="textview1">Registration No.</string>
    <string name="textView2">Password</string>
    <string name="button">LOGIN</string>
    <color name="myColor">#FF00FFFF</color>
    <string name="Registration">If you have not registered register now!!!</string>
    <string name="button2">REGISTER</string>
    <drawable name="color">#770088</drawable>
    <string name="Online">ONLINE LOGIN PAGE</string>
    <string name="textView3">WELCOME</string>
    <string name="button3">CLICK TO PROCEED</string>
    <string name="string">iitg_logo</string>
    <string name="string1">REGISTRATION </string>
    <string name="string3">Semester</string>
    <string name="string4">Department</string>
    <string name="string5">Year of admission</string>
    <string name="string6">Registration No</string>
    <string name="button4">FINISH REGISTRATION</string>
    <string name="instruction">Please read the following instructions carefully</string>
    <string name="instruction1">General Instructions</string>
    <string name="instruction2">1.Total duration of the examination is 180 minutes.</string>
    <string name="instruction3">2.The clock will be set at the server.The countdown timer in the middle of the screen will display the remaining time available for you to complete the exam. When the timer reaches zero, the examination will end by itself.You will not be required to end or submit your examination. </string>
    <string name="button5">1</string>
    <color name="color1">#FF0000</color>
    <color name="color2">#00FF00</color>
    <color name="color3">#A600B7</color>
    <color name="color4">#00009A</color>
    <string name="instruction4">3. The question palette displayed on the right side of screen will show the status of each question using one of the following symbols: </string>
    <string name="instruction5">You have not answered the question, but have visited it.</string>
    <string name="instruction6">You have marked the question for review.</string>
    <string name="instruction7">You have not selected any option for the answer and saved it.</string>
    <string name="instruction8">You have answered the question and saved it.</string>
    <string name="button6">1</string>
    <string name="button7">1</string>
    <string name="button8">1</string>
    <string name="button9">NEXT</string>
    <string name="instruction9">The Marked for Review status for a question simply indicates that you would like to look at that question again. If a question is answered and Marked for Review,your answer for that question will not be considered in the evaluation.</string>
    <string name="instruction10">NAVIGATING TO A QUESTION</string>
    <string name="instruction11">4.To answer a question, do the following: </string>
    <string name="instruction12">a)Click on the question number in the Question Palette to go to that question directly.</string>
    <string name="instruction13">b)Select an answer for a multiple choice type question.Use the virtual numeric keypad to enter a number as answer for a numerical type question.</string>
    <string name="instruction14">c)Click on Save and Next to save your answer for the current question and then go to the next question. Saving the answer means that your answer will be considered for evaluation. The answer may also be saved without any option being selected.  </string>
    <string name="instruction15">d)Click on Mark for Review and Next to save your answer for the current question, mark it for review, and then go to the next question.</string>
    <string name="instruction16">e)CAUTION:NOTE THAT YOUR ANSWER FOR THE CURRENT QUESTION WILL NOT BE SAVED,IF YOU NAVIGATE TO ANOTHER QUESTION DIRECTLY BY CLICKING ON ITS QUESTION NUMBER.</string>
    <string name="instruction18">MARKING SCHEME</string>
    <string name="instruction17">5.    You can view all the questions by clicking on the Question Paper button.Note that the options for multiple choice type questions will not be shown.</string>
    <string name="instruction19"/>
    <string name="button10">NEXT</string>
    <string name="instruction20">CHOOSE YOUR DEPARTMENT</string>
    <string name="text1">Computer Science and Engineering</string>
    <string name="text2">Electronics and Communication Engineering</string>
    <string name="text3">PROCEED TO THE TEST</string>
    <string name="question">QUESTION</string>
    <string name="dabble">EXAMPLE 2</string>
    <string name="bell">QUESTION</string>
    <string name="mybutton">GO TO QUESTION PAPER</string>
    <string name="mybutton1">GO TO INSTRUCTIONS</string>
    <string name="mybutton2">SAVE AND NEXT</string>
    <string name="mybutton3">MARK FOR REVIEW AND NEXT</string>
    <string name="submit">SUBMIT</string>
    <string name="Optiona">Option a</string>
    <string name="Optionb">Option b</string>
    <string name="Optionc">Option c</string>
    <string name="Optiond">Option d</string>
    <string name="Click">WHICHEVER OPTION YOU THINK IS RIGHT, CLICK THE RADIO BUTTON CORRESPONDING TO THAT OPTION</string>
    <string name="getscore">YOUR PERFORMANCE:</string>
    <string name="performance">CLICK HERE TO KNOW</string>
    <string name="correct">CORRECT</string>
    <string name="show">SHOW DATA</string>
    <string name="go_to_login">GO TO LOGIN PAGE</string>
    <string name="analysis">ANALYSIS</string>
    <string name="click_performance">Click on the button below to see a detailed analysis of your performance</string>
    <string name="Marking_1">6. The Marking Scheme for the test is:</string>
    <string name="choose_your_mode">CHOOSE YOUR MODE FOR THE EXAM</string>
    <string name="online"><u><b>ONLINE</b></u></string>
    <string name="offline"><u><b>OFFLINE</b></u></string>
    <string name="email_id">Username</string>
    <string name="Offline">OFFLINE LOGIN PAGE</string>
    <string name="registered_yet">REGISTERED YET??</string>
    <string name="register_now"><u><b>IF NOT, REGISTER NOW!!!</b></u></string>
    <string name="online_register">ONLINE REGISTRATION</string>
    <string name="name">Roll_no</string>
    <string name="username">userid</string>
    <string name="marks_inst1">6. The final score is calculated as per the following rules  :</string>
    <string name="marks_inst2">a) If the answer is correct, +3 marks is added to the score.</string>
    <string name="marks_inst3">b)  If the answer is wrong, 1 mark is deducted from the score, i.e.  a negative -1 mark is added . Hence, there will be penalties for guesswork leading to wrong answers.</string>
    <string name="marks_inst4">c)  If no option is selected, no marks will be deducted from the current score i.e. the current score remains unchanged.</string>
    <string name="branch">Branch</string>
    

</resources>


